fix: misplaced cells on Firefox (again!) and remove `.has-from-div`

--- a/yuntu_gen.css
+++ b/yuntu_gen.css
@@ -241,7 +241,7 @@ td:nth-of-type(6n+9),
 .icon.hovered + .has-icon .text-in-icon-hollow .text:not(.hovered) {
     color: var(--text-hovered);
 }
-.has-2, .has-3, .has-from-div {
+.has-2, .has-3 {
     margin: 0 -5em;
 }
 .text {
